[package]
name = "beacn-lib"
version = "0.1.1"
edition = "2024"

[dependencies]
strum = { version = "0.27.1", features = ["strum_macros", "derive"] }
enum-map = "2.7.3"

byteorder = "1.5.0"

log = "0.4.26"
anyhow = "1.0.96"

rusb = "0.9.4"

# Used for Managing Interaction threads
crossbeam = "0.8.4"

# Used to verify Mix / Mix Create image data
jpeg-decoder = "0.3.1"

# Easier Error Handling
thiserror = "2.0.16"