[package]
name = "beacn-lib"
version = "0.1.6"
edition = "2024"

[dependencies]
strum = { version = "0.28.0", features = ["strum_macros", "derive"] }
enum-map = "2.7.3"

byteorder = "1.5.0"

log = "0.4.29"
anyhow = "1.0.102"

rusb = "0.9.4"

# Used for Managing Interaction threads
crossbeam = "0.8.4"

# Used to verify Mix / Mix Create image data
jpeg-decoder = "0.3.2"

# Easier Error Handling
thiserror = "2.0.18"