[package]
name = "beacn-lib"
version = "0.1.11"
edition = "2024"

[features]
default = []

# These two get passed forward to nusb for use in async environments
tokio = ["nusb/tokio"]
smol = ["nusb/smol"]

[dependencies]
strum = { version = "0.28.0", features = ["strum_macros", "derive"] }
enum-map = "2.7.3"

byteorder = "1.5.0"

log = "0.4.33"
anyhow = "1.0.103"

#rusb = "0.9.4"
nusb = "0.2.5"

async-trait = "0.1.91"
futures-lite = "2.6.1"

# Used for Managing Interaction threads
flume = "0.12.0"

# Used to verify Mix / Mix Create image data
jpeg-decoder = "0.3.2"

# Easier Error Handling
thiserror = "2.0.18"